--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,8 @@
     nbproject/build-impl.xml file. 
 
     -->
+    
+    <target name="-post-compile">
+        <copy file="startServer.bat" toDir="${dist.dir}"></copy>
+    </target>
 </project>
