--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=CA2_ForFronter
 application.vendor=Valentina
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,17 +31,32 @@ dist.jar=${dist.dir}/CA2_ForFronter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.derby.jar=src/View/derby.jar
 file.reference.derby.jar-1=C:\\Users\\Valentina\\GlassFish_Server\\javadb\\lib\\derby.jar
+file.reference.derbyclient.jar=src/View/derbyclient.jar
+file.reference.derbynet.jar=src/View/derbynet.jar
+file.reference.eclipselink.jar=src/View/eclipselink.jar
 file.reference.gson-2.3.jar=C:\\Users\\Valentina\\Desktop\\gson-2.3.jar
+file.reference.gson-2.3.jar-1=src/View/gson-2.3.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=src/View/javax.persistence_2.1.0.v201304241213.jar
 file.reference.ojdbc7.jar=C:\\Users\\Valentina\\Desktop\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=src/View/ojdbc7.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=src/View/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.ojdbc7.jar}:\
-    ${file.reference.derby.jar-1}:\
-    ${file.reference.gson-2.3.jar}
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derbynet.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.gson-2.3.jar-1}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +86,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=webServer.WebServer
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
